@@ -50,6 +50,7 @@ t/public_key.t
 t/signature.t
 t/simple_canonicalization.t
 t/signer.t
+t/signer_dk.t
 t/signer_policy.t
 t/textwrap.t
 t/verifier.t
